# libbieai-swiszard

./: .gitignore  BENCHMARKS.md  CHANGELOG.md  LICENSE  README.md  SECURITY.md  pyproject.toml  server.py
memory_server/: __main__.py  app.py  db.py  embed.py
swiszard/: cli.py  handlers.py  narrate.py  router.py  seeds.py
tests/: test_router_rules.py
